src/components/activity-introduction/activity-page-links.scss
@import "../vars.scss";

.activity-page-links {
  height: fit-content;
  padding: 10px;
  border-radius: 10px;
  border: 1px solid $cc-charcoal-light2;
  color: $cc-charcoal;

  .pages {
    font-size: pxToRem(18);
    font-weight: bold;
    margin: 4px 10px;
  }

  .separator {
    width: 260px;
    height: 1px;
    background-color: $cc-charcoal-light2;
    margin: 10px;
  }

  .page-list {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .page-item-container {
    position: relative;
  }

  .page-item {
    display: flex;
    align-items: center;
    width: 260px;
    height: 40px;
    padding: 0 10px;
    cursor: pointer;
    color: inherit;
    text-decoration: none;
    &:hover {
      background-color: $cc-teal-light4;
      .page-link {
        text-decoration: underline;
      }
    }
    &:focus-visible {
      box-shadow: inset 0 0 0 2.5px $cc-button-focus-ring, inset 0 0 0 3.5px white;
      outline: none;
    }
    &:active {
      background-color: $cc-teal-dark2;
      color: white;
    }

    .page-link {
      margin-left: 3px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }

  .begin {
    width: 260px;
    margin: 20px 0 0 10px;
  }

}

